--- a/src/containers/navbar/style.css
+++ b/src/containers/navbar/style.css
@@ -21,3 +21,17 @@
     font-size: 28px;
     font-weight: 500;
 }
+
+.verticalCenter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.profilePhoto {
+    height: 35px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #BC4749;
+    border-radius: 50px;
+}
