--- a/src/containers/post/style.css
+++ b/src/containers/post/style.css
@@ -19,4 +19,16 @@
 .post__delete{
     border: none;
     background-color: white;
+    cursor: pointer;
+}
+
+.post__delete:focus{
+outline: none;
+
+}
+
+.post__photoUrl{
+    width: 100%;
+    margin: 16px 0px;
+    object-fit: cover;
 }
