--- a/src/containers/post/style.css
+++ b/src/containers/post/style.css
@@ -1,11 +1,14 @@
 .post{
     background-color: white;
     max-width: 600px;
+    margin: 16px 300px;
+    right: 500px;
 }
 .post__header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    object-fit: contain;
 }
 .post__headerLeft{
     display: flex;
