--- a/src/containers/post/style.css
+++ b/src/containers/post/style.css
@@ -1,7 +1,10 @@
 .post{
     background-color: white;
     max-width: 600px;
-    margin: 16px 300px;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+;
     right: 500px;
 }
 .post__header{
@@ -9,6 +12,7 @@
     justify-content: space-between;
     align-items: center;
     object-fit: contain;
+    padding-top: 10px;
 }
 .post__headerLeft{
     display: flex;
@@ -34,4 +38,9 @@ outline: none;
     width: 100%;
     margin: 16px 0px;
     object-fit: cover;
+}
+
+.post__caption {
+    margin: 0px 0px 50px 15px;
+    padding-bottom: 15px;
 }
