--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 
 body {
   margin: 0;
+  height: 100%;
   font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -17,4 +18,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html {
+  height: 100%;
+  margin: 0px;
+  background-color: #F3F2ef;
 }
